Fix overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,75 +1,76 @@
 body {
   margin: 0;
   padding: 0;
-  background: #1F2937;
+  overflow-x: hidden;
+  background: #1f2937;
 }
 
-input[type=range] {
+input[type='range'] {
   -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
   width: 100%; /* Specific width is required for Firefox. */
   border: 0px solid;
   background: transparent; /* Otherwise white in Chrome */
 }
 
-input[type=range]::-webkit-slider-thumb {
+input[type='range']::-webkit-slider-thumb {
   -webkit-appearance: none;
   height: 10px;
   width: 10px;
   border-radius: 50%;
-  background: #E5E7EB;
+  background: #e5e7eb;
   cursor: pointer;
   margin-top: -3px;
 }
 
-input[type=range]::-webkit-slider-thumb:hover {
+input[type='range']::-webkit-slider-thumb:hover {
   -webkit-appearance: none;
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #E5E7EB;
+  background: #e5e7eb;
   cursor: pointer;
   margin-top: -6px;
 }
 
 /* All the same stuff for Firefox */
-input[type=range]::-moz-range-thumb {
+input[type='range']::-moz-range-thumb {
   -webkit-appearance: none;
   height: 10px;
   width: 10px;
   border-radius: 50%;
-  background: #E5E7EB;
+  background: #e5e7eb;
   cursor: pointer;
 }
 
 /* All the same stuff for Firefox */
-input[type=range]::-moz-range-thumb:hover {
+input[type='range']::-moz-range-thumb:hover {
   -webkit-appearance: none;
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #E5E7EB;
+  background: #e5e7eb;
   cursor: pointer;
   margin-top: -6px;
 }
 
-input[type=range]::-webkit-slider-runnable-track {
+input[type='range']::-webkit-slider-runnable-track {
   width: 100%;
   height: 4px;
   cursor: pointer;
-  background: #4B5563;
+  background: #4b5563;
   border-radius: 2px;
 }
 
-input[type=range]:focus::-webkit-slider-runnable-track {
+input[type='range']:focus::-webkit-slider-runnable-track {
   outline: none;
-  background: #4B5563;
+  background: #4b5563;
 }
 
-input[type=range]::-moz-range-track {
+input[type='range']::-moz-range-track {
   width: 100%;
   height: 4px;
   cursor: pointer;
-  background: #4B5563;
+  background: #4b5563;
   border-radius: 2px;
 }
 
